--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ packages = [{include = "docker_django_redis_celery"}]
 python = "^3.10"
 django = "^5.0.7"
 python-dotenv = "^1.0.1"
+django-celery-beat = "^2.6.0"
+psycopg2-binary = "^2.9.9"
+redis = "^5.0.7"
+celery = "^5.4.0"
+django-celery-results = "^2.5.1"
 
 
 [build-system]
