--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,7 @@
-SECRET_KEY = django-insecure-ix713o174qzjd#3r@sd5m61rbc3^z@1cn*f#mp268*%@m__i+l
-DATABASE_NAME = currate
-DATABASE_USER = postgres
-DATABASE_PASSWORD = postgres
-DATABASE_HOST = 127.0.0.1
-DATABASE_PORT = 5432
+SECRET_KEY = secret
+POSTGRES_DB = postgres
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = postgres
+POSTGRES_HOST = postgres
+POSTGRES_PORT = 5432
+CELERY_BROKER_URL = redis://redis:6379/0
