--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,5 @@
-SECRET_KEY = django-insecure-ix713o174qzjd#3r@sd5m61rbc3^z@1cn*f#mp268*%@m__i+l
-DATABASE_NAME = currate
+SECRET_KEY = secret
+DATABASE_NAME = postgres
 DATABASE_USER = postgres
 DATABASE_PASSWORD = postgres
 DATABASE_HOST = 127.0.0.1
