--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   postgres:
     image: postgres:14.8-alpine3.18
     env_file: .env
+    ports:
+      - "5433:5432"
     volumes:
       - currate-data:/var/lib/postgresql/data
     networks:
@@ -25,6 +27,9 @@ services:
       - postgres
     networks:
       - the_net
+    volumes:
+      - /usr/src/app/static
+      - .:/usr/src/app
 
   celery:
     build: .
