--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ psycopg2-binary = "^2.9.9"
 redis = "^5.0.7"
 celery = "^5.4.0"
 django-celery-results = "^2.5.1"
+djangorestframework = "^3.15.2"
+requests = "^2.32.3"
 
 
 [build-system]
